--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         </section>
       </section>
       <section class="box">
-       <h4>Réussite Collective</h4><h6>(Cliquez pour étendre)</h6>
-        <ul class="liste1">
+       <h4>Réussite Collective <span>(Cliquez pour étendre)</span></h4>
+        <ul>
           <li><img src="../images/bullet.png" alt="">test</li>
           <li><img src="../images/bullet.png" alt="">j'ai fini un exercice, j'aide les autres</li>
           <li><img src="../images/bullet.png" alt="">En cas de difficultés, je n'hésite pas à solliciter le groupe, à condition d'avoir suffisamment recherché en autonomie, si je demande de l'aide je m'engage à approffondir le sujet par moi même.</li>
@@ -70,16 +70,16 @@
         </ul>
       </section>
 <section class="box">
-        <h4>Vivre ensemble</h4><p>(Cliquez pour étendre)</p>
-      <ul class="liste1">
+        <h4>Vivre ensemble <span>(Cliquez pour étendre)</span></h4>
+      <ul>
         <li><img src="../images/bullet.png" alt="">Je fais en sorte qu'il n'y ait pas de bruits parasites (téléphone en silencieux, je ramène mes écouteurs...)</li>
         <li><img src="../images/bullet.png" alt="">Je fais attention aux affaires des autres quand ils sont absents</li>
         <li><img src="../images/bullet.png" alt="">Je reste moi même</li>
       </ul>
       </section>
 <section class="box">
-        <h4>Spécial Covid...</h4><p>(Cliquez pour étendre)</p>
-        <ul class="liste1">
+        <h4>Spécial Covid... <span>(Cliquez pour étendre)</span></h4>
+        <ul>
           <li><img src="../images/bullet.png" alt="">Respectez la distanciation</li>
           <li><img src="../images/bullet.png" alt="">Evitez de prêter vos objets personnels (stylo, sucette...)</li>
           <li><img src="../images/bullet.png" alt="">En cas de doute portez un masque</li>
@@ -88,8 +88,8 @@
       </section>
 
       <section class="box">
-        <h4>Pour le FUN</h4><p> (Cliquez pour étendre)</p>
-        <ul class="liste1">
+        <h4>Pour le FUN <span> (Cliquez pour étendre)</span></h4>
+        <ul>
           <li><img src="../images/bullet.png" alt="">Tournée chouquettes chaque matin!!</li>
           <li><img src="../images/bullet.png" alt="">Apportez vos vibes positives</li>
           <li><img src="../images/bullet.png" alt="">Lachez rien!!</li>
