renvoi des dernières modifications

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </section>
       <section class="box">
        <h4>Réussite Collective <span>(Cliquez pour étendre)</span></h4>
-        <ul>
+        <ul id="hidden">
           <li><img src="../images/bullet.png" alt="">test</li>
           <li><img src="../images/bullet.png" alt="">j'ai fini un exercice, j'aide les autres</li>
           <li><img src="../images/bullet.png" alt="">En cas de difficultés, je n'hésite pas à solliciter le groupe, à condition d'avoir suffisamment recherché en autonomie, si je demande de l'aide je m'engage à approffondir le sujet par moi même.</li>
