--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </section>
 <section class="box">
         <h4>Vivre ensemble <span>(Cliquez pour étendre)</span></h4>
-      <ul>
+      <ul class="hidden">
         <li><img src="../images/bullet.png" alt="">Je fais en sorte qu'il n'y ait pas de bruits parasites (téléphone en silencieux, je ramène mes écouteurs...)</li>
         <li><img src="../images/bullet.png" alt="">Je fais attention aux affaires des autres quand ils sont absents</li>
         <li><img src="../images/bullet.png" alt="">Je reste moi même</li>
@@ -79,7 +79,7 @@
       </section>
 <section class="box">
         <h4>Spécial Covid... <span>(Cliquez pour étendre)</span></h4>
-        <ul>
+        <ul class="hidden">
           <li><img src="../images/bullet.png" alt="">Respectez la distanciation</li>
           <li><img src="../images/bullet.png" alt="">Evitez de prêter vos objets personnels (stylo, sucette...)</li>
           <li><img src="../images/bullet.png" alt="">En cas de doute portez un masque</li>
@@ -89,7 +89,7 @@
 
       <section class="box">
         <h4>Pour le FUN <span> (Cliquez pour étendre)</span></h4>
-        <ul>
+        <ul class="hidden">
           <li><img src="../images/bullet.png" alt="">Tournée chouquettes chaque matin!!</li>
           <li><img src="../images/bullet.png" alt="">Apportez vos vibes positives</li>
           <li><img src="../images/bullet.png" alt="">Lachez rien!!</li>
@@ -97,7 +97,7 @@
       </section>
       </div>
     </div>
-
+\forums\d1744887\javascript\general-javascript\event-click-plusieurs-elements-dom\
 
     <br>
     
