--- a/index.html
+++ b/index.html
@@ -1,109 +1,165 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-
-  <!-- Les bases d'une page HTML
+  <head>
+    <!-- Les bases d'une page HTML
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Brief Promo </title>
-  <meta name="description" content="Notre Charte de Promo">
-  <meta name="author" content="Promo Simplon La Poste">
+    <meta charset="utf-8" />
+    <title>Brief Promo</title>
+    <meta name="description" content="Notre Charte de Promo" />
+    <meta name="author" content="Promo Simplon La Poste" />
 
-  <!-- Métadonnées spécifique Mobiles
+    <!-- Métadonnées spécifique Mobiles
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Liaisons des Polices
+    <!-- Liaisons des Polices
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <link
+      href="//fonts.googleapis.com/css?family=Raleway:400,300,600"
+      rel="stylesheet"
+      type="text/css"
+    />
 
-  <!-- Liaisons des fichiers CSS
+    <!-- Liaisons des fichiers CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="./css/normalize.css">
-  <link rel="stylesheet" href="./css/skeleton.css">
-  <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/skeleton.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
-  <script src="./brief.js"></script>
-  <!-- Liaisons du fichier JS si vous faites le bonus
+    <script src="./brief.js"></script>
+    <!-- Liaisons du fichier JS si vous faites le bonus
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <!-- TODO -->
+    <!-- TODO -->
 
-  <!-- Liaison du Favicon
+    <!-- Liaison du Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" href="./images/favicon.png" />
+    <link rel="icon" href="./images/favicon.png" />
+  </head>
 
-</head>
-
-<body>
-  <header class="header">
-    <div class="container">
-      <h4>
-        Promo DWWM - just dev it!
-      </h4>
-    </div>
-  </header>
-
-
-  <!-- Structure principale de la page
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <main class="container">
-<section id="promo">
-    <div class="row">
-      <div class="column">
-        <button id="button">ACCES CHARTE</button>
-        <section id="colonne_promo">
-        <h4>Ceci est notre charte de promo</h4>
-        
-        <p>Ces règles nous unissent et ont été <strong>inventées</strong> et sont <strong>officieuses</strong> !<br/> Les voici, prenez plaisir à les parcourir !</p>
-        </section>
-      </section>
-      <section class="box">
-       <h4>Réussite Collective <span>(Cliquez pour étendre)</span></h4>
-        <ul id="hidden">
-          <li><img src="../images/bullet.png" alt="">test</li>
-          <li><img src="../images/bullet.png" alt="">j'ai fini un exercice, j'aide les autres</li>
-          <li><img src="../images/bullet.png" alt="">En cas de difficultés, je n'hésite pas à solliciter le groupe, à condition d'avoir suffisamment recherché en autonomie, si je demande de l'aide je m'engage à approffondir le sujet par moi même.</li>
-          <li><img src="../images/bullet.png" alt="">Je pratique la critique positive, je donne des pistes d'amélioration/Une argumentation et je reste bienveillant</li>
-          <li><img src="../images/bullet.png" alt="">Je partage mes sources, bonnes pratiques, trucs et astuces.</li>
-          <li><img src="../images/bullet.png" alt="">Je reste positif et j'en parle aux autres en cas de souci</li>
-          <li><img src="../images/bullet.png" alt="">Ne pas toujours faire des groupes par affinité et faire des efforts même si on ne s'entend pas plus que ça avec l'autre, aller vers les personnes timides et leur laisser la parole dans les travaux de groupe</li>
-        </ul>
-      </section>
-<section class="box">
-        <h4>Vivre ensemble <span>(Cliquez pour étendre)</span></h4>
-      <ul class="hidden">
-        <li><img src="../images/bullet.png" alt="">Je fais en sorte qu'il n'y ait pas de bruits parasites (téléphone en silencieux, je ramène mes écouteurs...)</li>
-        <li><img src="../images/bullet.png" alt="">Je fais attention aux affaires des autres quand ils sont absents</li>
-        <li><img src="../images/bullet.png" alt="">Je reste moi même</li>
-      </ul>
-      </section>
-<section class="box">
-        <h4>Spécial Covid... <span>(Cliquez pour étendre)</span></h4>
-        <ul class="hidden">
-          <li><img src="../images/bullet.png" alt="">Respectez la distanciation</li>
-          <li><img src="../images/bullet.png" alt="">Evitez de prêter vos objets personnels (stylo, sucette...)</li>
-          <li><img src="../images/bullet.png" alt="">En cas de doute portez un masque</li>
-          <li><img src="../images/bullet.png" alt="">Lors d'une absence Covid, pensez à prévenir vos professeurs et votre hierarchie</li>
-        </ul>
-      </section>
-
-      <section class="box">
-        <h4>Pour le FUN <span> (Cliquez pour étendre)</span></h4>
-        <ul class="hidden">
-          <li><img src="../images/bullet.png" alt="">Tournée chouquettes chaque matin!!</li>
-          <li><img src="../images/bullet.png" alt="">Apportez vos vibes positives</li>
-          <li><img src="../images/bullet.png" alt="">Lachez rien!!</li>
-        </ul>
-      </section>
+  <body>
+    <header class="header">
+      <div class="container">
+        <h4>Promo DWWM - just dev it!</h4>
       </div>
-    </div>
-\forums\d1744887\javascript\general-javascript\event-click-plusieurs-elements-dom\
+    </header>
 
-    <br>
-    
-    <section>
-      Grâce à ce règlement on obtient le code suivant : 
-      <pre><code style="overflow: auto;">
+    <!-- Structure principale de la page
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <main class="container">
+      <div class="row">
+        <div class="column">
+          <section id="promo">
+            <button id="button">ACCES CHARTE</button>
+            <section id="colonne_promo">
+              <h4>Ceci est notre charte de promo</h4>
+
+              <p>
+                Ces règles nous unissent et ont été
+                <strong>inventées</strong> et sont
+                <strong>officieuses</strong> !<br />
+                Les voici, prenez plaisir à les parcourir !
+              </p>
+            </section>
+          </section>
+          <div class="box">
+            <p class="sous_titre">
+              Réussite Collective <span>(Cliquez pour étendre)</span>
+            </p>
+            <ul id="hidden">
+              <li><img src="../images/bullet.png" alt="" />test</li>
+              <li>
+                <img src="../images/bullet.png" alt="" />j'ai fini un exercice,
+                j'aide les autres
+              </li>
+              <li>
+                <img src="../images/bullet.png" alt="" />En cas de difficultés,
+                je n'hésite pas à solliciter le groupe, à condition d'avoir
+                suffisamment recherché en autonomie, si je demande de l'aide je
+                m'engage à approffondir le sujet par moi même.
+              </li>
+              <li>
+                <img src="../images/bullet.png" alt="" />Je pratique la critique
+                positive, je donne des pistes d'amélioration/Une argumentation
+                et je reste bienveillant
+              </li>
+              <li>
+                <img src="../images/bullet.png" alt="" />Je partage mes sources,
+                bonnes pratiques, trucs et astuces.
+              </li>
+              <li>
+                <img src="../images/bullet.png" alt="" />Je reste positif et
+                j'en parle aux autres en cas de souci
+              </li>
+              <li>
+                <img src="../images/bullet.png" alt="" />Ne pas toujours faire
+                des groupes par affinité et faire des efforts même si on ne
+                s'entend pas plus que ça avec l'autre, aller vers les personnes
+                timides et leur laisser la parole dans les travaux de groupe
+              </li>
+            </ul>
+          </div>
+          <div class="box">
+            <h4>Vivre ensemble <span>(Cliquez pour étendre)</span></h4>
+            <ul class="hidden">
+              <li>
+                <img src="../images/bullet.png" alt="" />Je fais en sorte qu'il
+                n'y ait pas de bruits parasites (téléphone en silencieux, je
+                ramène mes écouteurs...)
+              </li>
+              <li>
+                <img src="../images/bullet.png" alt="" />Je fais attention aux
+                affaires des autres quand ils sont absents
+              </li>
+              <li>
+                <img src="../images/bullet.png" alt="" />Je reste moi même
+              </li>
+            </ul>
+          </div>
+          <div class="box">
+            <h4>Spécial Covid... <span>(Cliquez pour étendre)</span></h4>
+            <ul class="hidden">
+              <li>
+                <img src="../images/bullet.png" alt="" />Respectez la
+                distanciation
+              </li>
+              <li>
+                <img src="../images/bullet.png" alt="" />Evitez de prêter vos
+                objets personnels (stylo, sucette...)
+              </li>
+              <li>
+                <img src="../images/bullet.png" alt="" />En cas de doute portez
+                un masque
+              </li>
+              <li>
+                <img src="../images/bullet.png" alt="" />Lors d'une absence
+                Covid, pensez à prévenir vos professeurs et votre hierarchie
+              </li>
+            </ul>
+          </div>
+
+          <div class="box">
+            <h4>Pour le FUN <span> (Cliquez pour étendre)</span></h4>
+            <ul class="hidden">
+              <li>
+                <img src="../images/bullet.png" alt="" />Tournée chouquettes
+                chaque matin!!
+              </li>
+              <li>
+                <img src="../images/bullet.png" alt="" />Apportez vos vibes
+                positives
+              </li>
+              <li><img src="../images/bullet.png" alt="" />Lachez rien!!</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      \forums\d1744887\javascript\general-javascript\event-click-plusieurs-elements-dom\
+
+      <br />
+
+      <section>
+        Grâce à ce règlement on obtient le code suivant :
+        <pre><code style="overflow: auto;">
         var compétencesDePromo = [];
         var humeurPromo = 'Au top'; 
         if('règles comprises' == true && 'règles appliquées' == true) {
@@ -112,11 +168,10 @@
           humeurPromo = 'Pas top';
         }
       </code></pre>
-    </section>
+      </section>
+    </main>
 
-  </main>
-  
-  <!-- Fin du document (fermeture des balises)
+    <!-- Fin du document (fermeture des balises)
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
+  </body>
 </html>
