--- a/index.html
+++ b/index.html
@@ -66,35 +66,29 @@
               Réussite Collective <span>(Cliquez pour étendre)</span>
             </p>
             <ul id="hidden">
-              <li><img src="../images/bullet.png" alt="" />test</li>
-              <li>
-                <img src="../images/bullet.png" alt="" />j'ai fini un exercice,
-                j'aide les autres
+              <li class="align">test</li>
+              <li class="align">j'ai fini un exercice, j'aide les autres</li>
+              <li class="align">
+                En cas de difficultés, je n'hésite pas à solliciter le groupe, à
+                condition d'avoir suffisamment recherché en autonomie, si je
+                demande de l'aide je m'engage à approffondir le sujet par moi
+                même.
               </li>
-              <li>
-                <img src="../images/bullet.png" alt="" />En cas de difficultés,
-                je n'hésite pas à solliciter le groupe, à condition d'avoir
-                suffisamment recherché en autonomie, si je demande de l'aide je
-                m'engage à approffondir le sujet par moi même.
+              <li class="align">
+                Je pratique la critique positive, je donne des pistes
+                d'amélioration/Une argumentation et je reste bienveillant
               </li>
-              <li>
-                <img src="../images/bullet.png" alt="" />Je pratique la critique
-                positive, je donne des pistes d'amélioration/Une argumentation
-                et je reste bienveillant
+              <li class="align">
+                Je partage mes sources, bonnes pratiques, trucs et astuces.
               </li>
-              <li>
-                <img src="../images/bullet.png" alt="" />Je partage mes sources,
-                bonnes pratiques, trucs et astuces.
+              <li class="align">
+                Je reste positif et j'en parle aux autres en cas de souci
               </li>
-              <li>
-                <img src="../images/bullet.png" alt="" />Je reste positif et
-                j'en parle aux autres en cas de souci
-              </li>
-              <li>
-                <img src="../images/bullet.png" alt="" />Ne pas toujours faire
-                des groupes par affinité et faire des efforts même si on ne
-                s'entend pas plus que ça avec l'autre, aller vers les personnes
-                timides et leur laisser la parole dans les travaux de groupe
+              <li class="align">
+                Ne pas toujours faire des groupes par affinité et faire des
+                efforts même si on ne s'entend pas plus que ça avec l'autre,
+                aller vers les personnes timides et leur laisser la parole dans
+                les travaux de groupe
               </li>
             </ul>
           </div>
