fin modif puces

--- a/index.html
+++ b/index.html
@@ -95,38 +95,27 @@
           <div class="box">
             <h4>Vivre ensemble <span>(Cliquez pour étendre)</span></h4>
             <ul class="hidden">
-              <li>
-                <img src="../images/bullet.png" alt="" />Je fais en sorte qu'il
-                n'y ait pas de bruits parasites (téléphone en silencieux, je
-                ramène mes écouteurs...)
+              <li class="align">
+                Je fais en sorte qu'il n'y ait pas de bruits parasites
+                (téléphone en silencieux, je ramène mes écouteurs...)
               </li>
-              <li>
-                <img src="../images/bullet.png" alt="" />Je fais attention aux
-                affaires des autres quand ils sont absents
+              <li class="align">
+                Je fais attention aux affaires des autres quand ils sont absents
               </li>
-              <li>
-                <img src="../images/bullet.png" alt="" />Je reste moi même
-              </li>
+              <li class="align">Je reste moi même</li>
             </ul>
           </div>
           <div class="box">
             <h4>Spécial Covid... <span>(Cliquez pour étendre)</span></h4>
             <ul class="hidden">
-              <li>
-                <img src="../images/bullet.png" alt="" />Respectez la
-                distanciation
+              <li class="align">Respectez la distanciation</li>
+              <li class="align">
+                Evitez de prêter vos objets personnels (stylo, sucette...)
               </li>
-              <li>
-                <img src="../images/bullet.png" alt="" />Evitez de prêter vos
-                objets personnels (stylo, sucette...)
-              </li>
-              <li>
-                <img src="../images/bullet.png" alt="" />En cas de doute portez
-                un masque
-              </li>
-              <li>
-                <img src="../images/bullet.png" alt="" />Lors d'une absence
-                Covid, pensez à prévenir vos professeurs et votre hierarchie
+              <li class="align">En cas de doute portez un masque</li>
+              <li class="align">
+                Lors d'une absence Covid, pensez à prévenir vos professeurs et
+                votre hierarchie
               </li>
             </ul>
           </div>
@@ -134,15 +123,9 @@
           <div class="box">
             <h4>Pour le FUN <span> (Cliquez pour étendre)</span></h4>
             <ul class="hidden">
-              <li>
-                <img src="../images/bullet.png" alt="" />Tournée chouquettes
-                chaque matin!!
-              </li>
-              <li>
-                <img src="../images/bullet.png" alt="" />Apportez vos vibes
-                positives
-              </li>
-              <li><img src="../images/bullet.png" alt="" />Lachez rien!!</li>
+              <li class="align">Tournée chouquettes chaque matin!!</li>
+              <li class="align">Apportez vos vibes positives</li>
+              <li class="align">Lachez rien!!</li>
             </ul>
           </div>
         </div>
