--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Liaison du Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" href="./images/favicon.png" />
+    <link rel="icon" href="favicon.ico" />
   </head>
 
   <body>
@@ -49,7 +49,6 @@
       <div class="row">
         <div class="column">
           <section id="promo">
-            <button id="button">ACCES CHARTE</button>
             <section id="colonne_promo">
               <h4>Ceci est notre charte de promo</h4>
 
@@ -60,6 +59,7 @@
                 Les voici, prenez plaisir à les parcourir !
               </p>
             </section>
+            <button class="button" type="button">ACCES CHARTE</button>
           </section>
           <div class="box">
             <p class="sous_titre">
