--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
           <section id="promo">
             <section id="colonne_promo">
               <h4>Ceci est notre charte de promo</h4>
-
               <p>
                 Ces règles nous unissent et ont été
                 <strong>inventées</strong> et sont
@@ -59,8 +58,9 @@
                 Les voici, prenez plaisir à les parcourir !
               </p>
             </section>
-            <button class="button" type="button">ACCES CHARTE</button>
+            <button id="button" type="button">ACCES CHARTE</button>
           </section>
+
           <div class="box">
             <p class="sous_titre">
               Réussite Collective <span>(Cliquez pour étendre)</span>
@@ -92,7 +92,9 @@
             </ul>
           </div>
           <div class="box">
-            <h4>Vivre ensemble <span>(Cliquez pour étendre)</span></h4>
+            <p class="sous_titre">
+              Vivre ensemble <span>(Cliquez pour étendre)</span>
+            </p>
             <ul class="hidden">
               <li class="align">
                 Je fais en sorte qu'il n'y ait pas de bruits parasites
@@ -105,7 +107,9 @@
             </ul>
           </div>
           <div class="box">
-            <h4>Spécial Covid... <span>(Cliquez pour étendre)</span></h4>
+            <p class="sous_titre">
+              Spécial Covid... <span>(Cliquez pour étendre)</span>
+            </p>
             <ul class="hidden">
               <li class="align">Respectez la distanciation</li>
               <li class="align">
@@ -120,7 +124,9 @@
           </div>
 
           <div class="box">
-            <h4>Pour le FUN <span> (Cliquez pour étendre)</span></h4>
+            <p class="sous_titre">
+              Pour le FUN <span> (Cliquez pour étendre)</span>
+            </p>
             <ul class="hidden">
               <li class="align">Tournée chouquettes chaque matin!!</li>
               <li class="align">Apportez vos vibes positives</li>
